--- a/action.yml
+++ b/action.yml
@@ -105,6 +105,10 @@ inputs:
     description: "Set to true to explicitly skip Speakeasy workflow target testing after generation, even when enabled in the Speakeasy workflow configuration. This is useful for running workflow testing as a separate GitHub Actions workflow without affecting/blocking generation."
     default: "false"
     required: false
+  skip_versioning:
+    description: "Skip automatic SDK version increments"
+    default: "false"
+    required: false
   poetry_version:
     description: "Version of poetry to install. Not recommended for use without consulting Speakeasy support."
     required: false
